<resources>
    <string name="app_name">HljEmojiLibrary</string>

    <!--emoji map-->
    <string name="face_001">[大笑]</string>
    <string name="face_002">[两眼放光]</string>
    <string name="face_003">[抠鼻]</string>
    <string name="face_004">[吐舌]</string>
    <string name="face_005">[委屈]</string>
    <string name="face_006">[微笑]</string>
    <string name="face_007">[吓]</string>
    <string name="face_008">[鄙视]</string>
    <string name="face_009">[闭嘴]</string>
    <string name="face_010">[不高兴]</string>
    <string name="face_011">[大哭]</string>
    <string name="face_012">[鼓掌]</string>
    <string name="face_013">[汗]</string>
    <string name="face_014">[酷]</string>
    <string name="face_015">[亲亲]</string>
    <string name="face_016">[生气]</string>
    <string name="face_017">[喜欢]</string>
    <string name="face_018">[晕]</string>
    <string name="face_019">[抓狂]</string>
    <string name="face_020">[打]</string>
    <string name="face_021">[哈欠]</string>
    <string name="face_022">[哼]</string>
    <string name="face_023">[撇嘴]</string>
    <string name="face_024">[睡觉]</string>
    <string name="face_025">[再见]</string>
    <string name="face_026">[坏笑]</string>
    <string name="face_027">[可怜]</string>
    <string name="face_028">[贱笑]</string>
    <string name="face_029">[疑问]</string>
    <string name="face_030">[无语]</string>
    <string name="face_031">[怒骂]</string>
    <string name="face_032">[困]</string>
    <string name="face_033">[口罩]</string>
    <string name="face_034">[赞]</string>
    <string name="face_035">[ok]</string>
    <string name="face_036">[耶]</string>

    <string name="face2_001">[:D]</string>
    <string name="face2_002">[(F)]</string>
    <string name="face2_003">[:-o]</string>
    <string name="face2_004">[:p]</string>
    <string name="face2_005">[:$]</string>
    <string name="face2_006">[):]</string>
    <string name="face2_007">[|-)]</string>
    <string name="face2_008">[8-)]</string>
    <string name="face2_009">[:-#]</string>
    <string name="face2_010">[:(]</string>
    <string name="face2_011"><![CDATA[[:\'(]]]></string>
    <string name="face2_012">[8-|]</string>
    <string name="face2_014">[(H)]</string>
    <string name="face2_015">[(|)]</string>
    <string name="face2_016">[(})]</string>
    <string name="face2_017">[({)]</string>
    <string name="face2_018">[+o(]</string>
    <string name="face2_019">[:@]</string>
    <string name="face2_020">[(u)]</string>
    <string name="face2_021">[(W)]</string>
    <string name="face2_022">[^o)]</string>
    <string name="face2_023">[:s]</string>
    <string name="face2_024">[(S)]</string>
    <string name="face2_025">[(R)]</string>
    <string name="face2_026">[8o|]</string>
    <string name="face2_027">[(k)]</string>
    <string name="face2_028">[(a)]</string>
    <string name="face2_029">[:-*]</string>
    <string name="face2_030">[:|]</string>
    <string name="face2_031">[(*)]</string>
    <string name="face2_032">[*-)]</string>
    <string name="face2_033">[(#)]</string>
    <string name="face2_034">[(D)]</string>
    <string name="face2_035">[;)]</string>
    <string name="face2_036"><![CDATA[[<o)]]]></string>
</resources>
