<?xml version="1.0" encoding="utf-8"?>
<faceTree>

    <face
        resource="@mipmap/face_001"
        title="@string/face2_001"/>
    <face
        resource="@mipmap/face_002"
        title="@string/face2_002"/>
    <face
        resource="@mipmap/face_003"
        title="@string/face2_003"/>
    <face
        resource="@mipmap/face_004"
        title="@string/face2_004"/>
    <face
        resource="@mipmap/face_005"
        title="@string/face2_005"/>
    <face
        resource="@mipmap/face_006"
        title="@string/face2_006"/>
    <face
        resource="@mipmap/face_007"
        title="@string/face2_007"/>
    <face
        resource="@mipmap/face_008"
        title="@string/face2_008"/>
    <face
        resource="@mipmap/face_009"
        title="@string/face2_009"/>
    <face
        resource="@mipmap/face_010"
        title="@string/face2_010"/>
    <face
        resource="@mipmap/face_011"
        title="@string/face2_011"/>
    <face
        resource="@mipmap/face_012"
        title="@string/face2_012"/>
    <face
        resource="@mipmap/face_014"
        title="@string/face2_014"/>
    <face
        resource="@mipmap/face_015"
        title="@string/face2_015"/>
    <face
        resource="@mipmap/face_016"
        title="@string/face2_016"/>
    <face
        resource="@mipmap/face_017"
        title="@string/face2_017"/>
    <face
        resource="@mipmap/face_018"
        title="@string/face2_018"/>
    <face
        resource="@mipmap/face_019"
        title="@string/face2_019"/>
    <face
        resource="@mipmap/face_020"
        title="@string/face2_020"/>
    <face
        resource="@mipmap/face_021"
        title="@string/face2_021"/>
    <face
        resource="@mipmap/face_022"
        title="@string/face2_022"/>
    <face
        resource="@mipmap/face_023"
        title="@string/face2_023"/>
    <face
        resource="@mipmap/face_024"
        title="@string/face2_024"/>
    <face
        resource="@mipmap/face_025"
        title="@string/face2_025"/>
    <face
        resource="@mipmap/face_026"
        title="@string/face2_026"/>
    <face
        resource="@mipmap/face_027"
        title="@string/face2_027"/>
    <face
        resource="@mipmap/face_028"
        title="@string/face2_028"/>
    <face
        resource="@mipmap/face_029"
        title="@string/face2_029"/>
    <face
        resource="@mipmap/face_030"
        title="@string/face2_030"/>
    <face
        resource="@mipmap/face_031"
        title="@string/face2_031"/>
    <face
        resource="@mipmap/face_032"
        title="@string/face2_032"/>
    <face
        resource="@mipmap/face_033"
        title="@string/face2_033"/>
    <face
        resource="@mipmap/face_034"
        title="@string/face2_034"/>
    <face
        resource="@mipmap/face_035"
        title="@string/face2_035"/>
    <face
        resource="@mipmap/face_036"
        title="@string/face2_036"/>

</faceTree>