<?xml version="1.0" encoding="utf-8"?>
<faceTree>
    <face
        resource="@mipmap/face_001"
        title="@string/face_001">
    </face>
    <face
        resource="@mipmap/face_002"
        title="@string/face_002">
    </face>
    <face
        resource="@mipmap/face_003"
        title="@string/face_003">
    </face>
    <face
        resource="@mipmap/face_004"
        title="@string/face_004">
    </face>
    <face
        resource="@mipmap/face_005"
        title="@string/face_005">
    </face>
    <face
        resource="@mipmap/face_006"
        title="@string/face_006">
    </face>
    <face
        resource="@mipmap/face_007"
        title="@string/face_007">
    </face>
    <face
        resource="@mipmap/face_008"
        title="@string/face_008">
    </face>
    <face
        resource="@mipmap/face_009"
        title="@string/face_009">
    </face>
    <face
        resource="@mipmap/face_010"
        title="@string/face_010">
    </face>
    <face
        resource="@mipmap/face_011"
        title="@string/face_011">
    </face>
    <face
        resource="@mipmap/face_012"
        title="@string/face_012">
    </face>
    <face
        resource="@mipmap/face_013"
        title="@string/face_013">
    </face>
    <face
        resource="@mipmap/face_014"
        title="@string/face_014">
    </face>
    <face
        resource="@mipmap/face_015"
        title="@string/face_015">
    </face>
    <face
        resource="@mipmap/face_016"
        title="@string/face_016">
    </face>
    <face
        resource="@mipmap/face_017"
        title="@string/face_017">
    </face>
    <face
        resource="@mipmap/face_018"
        title="@string/face_018">
    </face>
    <face
        resource="@mipmap/face_019"
        title="@string/face_019">
    </face>
    <face
        resource="@mipmap/face_020"
        title="@string/face_020">
    </face>
    <face
        resource="@mipmap/face_021"
        title="@string/face_021">
    </face>
    <face
        resource="@mipmap/face_022"
        title="@string/face_022">
    </face>
    <face
        resource="@mipmap/face_023"
        title="@string/face_023">
    </face>
    <face
        resource="@mipmap/face_024"
        title="@string/face_024">
    </face>
    <face
        resource="@mipmap/face_025"
        title="@string/face_025">
    </face>
    <face
        resource="@mipmap/face_026"
        title="@string/face_026">
    </face>
    <face
        resource="@mipmap/face_027"
        title="@string/face_027">
    </face>
    <face
        resource="@mipmap/face_028"
        title="@string/face_028">
    </face>
    <face
        resource="@mipmap/face_029"
        title="@string/face_029">
    </face>
    <face
        resource="@mipmap/face_030"
        title="@string/face_030">
    </face>
    <face
        resource="@mipmap/face_031"
        title="@string/face_031">
    </face>
    <face
        resource="@mipmap/face_032"
        title="@string/face_032">
    </face>
    <face
        resource="@mipmap/face_033"
        title="@string/face_033">
    </face>
    <face
        resource="@mipmap/face_034"
        title="@string/face_034">
    </face>
    <face
        resource="@mipmap/face_035"
        title="@string/face_035">
    </face>
    <face
        resource="@mipmap/face_036"
        title="@string/face_036">
    </face>

</faceTree>